Actualización del archivo pom.xml para utilizar versiones más recientes de Spring Boot y Spring Cloud. Se han añadido nuevas dependencias y configuraciones de caché, así como mejoras en el manejo de errores y optimización de rendimiento en el cliente de productos. Se han implementado pruebas unitarias y de integración para asegurar la correcta funcionalidad de la API de productos similares.